manifests/deployment-ssl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-ssl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-ssl
  template:
    metadata:
      labels:
        app: nginx-ssl
    spec:
      containers:
        - name: nginx
          image: nginx:latest
          ports:
            - containerPort: 80
            - containerPort: 443
          volumeMounts:
            - name: html
              mountPath: /usr/share/nginx/html
            - name: ssl-certs
              mountPath: /etc/ssl/certs
              readOnly: true
      volumes:
        - name: html
          configMap:
            name: nginx-html-ssl
        - name: ssl-certs
          secret:
            secretName: ssl-cert
