manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-mt
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-mt
  template:
    metadata:
      labels:
        app: nginx-mt
    spec:
      containers:
        - name: nginx
          image: nginx:1.25.3
          ports:
            - containerPort: 80
          volumeMounts:
            - name: html-volume
              mountPath: /usr/share/nginx/html
        - name: multitool
          image: wbitt/network-multitool
          ports:
            - containerPort: 81
      volumes:
        - name: html-volume
          configMap:
            name: nginx-html
