manifests/nginx-svc-ssl.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc-ssl
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
    - name: https
      port: 443
      targetPort: 443
  selector:
    app: nginx-ssl
